# riptide_simulink

./: .gitignore  BouyancyScript.m  BouyancyTest_import_autosave.json  Dummy.cpp  Dummy.h  IntegrationZone.h  Notes_On_Building_Simulink_Binary.txt  Orgin-SimplifiedAssembly_Default_sldprt.STEP  Simple_3_Model.slxc  SimplifiedAssembly.slx.autosave  SimplifiedAssembly.slxc  SimplifiedAssembly_DataFile.m  a.out  frames_2023-02-19_14.16.16.gv  startSim.asv  startSim.m  test.cpp  test.h  untitled.slx  untitled1.slx  untitled1.slx.autosave  untitled_import_autosave.json
GradientBouyanC/: GradientBouyanC.cpp  IntegrationZone.cpp  LineSegment.cpp  LineSegment.h  Vertex.cpp  Vertex.h  a.out
Models/Porportional_grt_rtw/: Porportional.c  Porportional.h  Porportional.mk  Porportional_data.c  Porportional_private.h  Porportional_types.h  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
Models/Simple_3_Model/: GimbalLockTest.asv  GimbalLockTest.m  Imu_Publisher.slx  Pose_Publisher.slx  Simple_3_Model.slx  Simple_3_Model.slx.autosave  Simple_3_Model.slx.original  Simple_3_Model.slx.r2022a  Simple_3_Model.slxc  Simple_3_Model_C.slxc  StartSim.m  Thruster_Magnitude.slx  Twist_Publisher.slx  untitled.slxc
Models/Simple_3_Model_C/: BuildModel.m  Do_Model.slx  Do_Model.slx.autosave  Do_Model.slx.original  Do_Model0  Simple_3_Model.slx  Simple_3_Model.slxc  Simple_3_Model_C.slx  Simple_3_Model_C.slx.autosave  Simple_3_Model_C.slx.original  Simple_3_Model_C.slxc
Models/Simple_3_Model_Windows/: Simple_3_Model.slx  Simple_3_Model.slx.original  Simple_3_Model.slxc  StartSim.m  ThrusterSolver.slxc
Models/Simple_3_Model_Windows/src/ff_controller/: CMakeLists.txt  package.xml  packageInfo.mat
Models/Simple_3_Model_Windows/src/ff_controller/include/ff_controller/: FF_Controller_types.h  ros2nodeinterface.h  rtmodel.h  rtwtypes.h  slros2_initialize.h  slros_busmsg_conversion.h  visibility_control.h  zero_crossing_types.h
Models/Simple_3_Model_Windows/src/ff_controller/src/: FF_Controller.cpp  main.cpp  ros2nodeinterface.cpp  slros2_initialize.cpp
Models/Simple_3_Model_Windows/src/simple_active/: CMakeLists.txt  package.xml  packageInfo.mat
Models/Simple_3_Model_Windows/src/simple_active/include/simple_active/: ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  simple_active_private.h  simple_active_types.h  slros2_initialize.h  visibility_control.h
Models/Simple_3_Model_Windows/src/simple_active/src/: main.cpp  rtGetInf.cpp  simple_active.cpp  simple_active_data.cpp  slros2_initialize.cpp
Models/Simple_3_Model_Windows/src/thrustersolver/: CMakeLists.txt  package.xml  packageInfo.mat
Models/Simple_3_Model_Windows/src/thrustersolver/include/thrustersolver/: MW_custom_RTOS_header.h  ThrusterSolver.h  ThrusterSolver_private.h  ThrusterSolver_types.h  ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros2_initialize.h  slros_busmsg_conversion.h  visibility_control.h
Models/Simple_3_Model_Windows/src/thrustersolver/src/: ThrusterSolver.cpp  ThrusterSolver_data.cpp  main.cpp  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros2_initialize.cpp
Models/Simple_Y_Model/: SimpleYModel.slx  untitled.slx  untitled.slx.original
Models/Simplified_Model_v1/: GatherDataSimulation.slx  GatherDataSimulation.slxc  ImportedData.m  SimplifiedAssembly.slx  SimplifiedAssembly.slx.autosave  SimplifiedAssembly.slx.original  SimplifiedAssembly.slxc  SimplifiedAssembly.xml  SimplifiedAssembly_DataFile1.m  SimplifiedAssembly_DataFile2.m  SimplifiedAssembly_DataFile2.mat  SimplifiedAssembly_error.txt
Models/Test C Compiler/: Build_Porportional_Follower.asv  Build_Porportional_Follower.m  CMakeCache.txt  Makefile  Porportional  Porportional_Follower.slx  TestController.slx  cmake_install.cmake
Models/Test C Compiler/Porportional_Follower_Test_grt_rtw/: CMakeLists.txt  Porportional_Follower_Test.cpp  Porportional_Follower_Test.h  Porportional_Follower_Test_private.h  Porportional_Follower_Test_types.h  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
Stuff/: untitled.m
riptide_simulink_ros/: CMakeLists.txt  package.xml
riptide_simulink_ros/Do_Model0_ert_shrlib_rtw/: CMakeLists.txt  Do_Model0.c  Do_Model0.def  Do_Model0.h  Do_Model0.sh  Do_Model0_data.c  Do_Model0_private.h  Do_Model0_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  rtwtypes.h  rtwtypeschksum.mat
riptide_simulink_ros/Do_Model0_ert_shrlib_rtw/export/: Do_Model0Targets-release.cmake
riptide_simulink_ros/Do_Model0_ert_shrlib_rtw/tmwinternal/: tr
riptide_simulink_ros/include/riptide_simulink_ros/: GradientBouyancyLib.h  IntegrationZone.h  LineSegment.h  Matrix3d.h  Vector3d.h  Vertex.h  sim_ros_wrapper.hpp
riptide_simulink_ros/lib/Do_Model0_ert_shrlib_rtw/export/: Do_Model0Targets-noconfig.cmake  Do_Model0Targets.cmake
riptide_simulink_ros/src/: GradientBouyancyLib.cpp  IntegrationZone.cpp  LineSegment.cpp  Matrix3d.cpp  Vector3d.cpp  Vertex.cpp  main.cpp  sim_ros_wrapper.cpp
slprj/_jitprj/: M4dWB9j4fxBpRU7rDNDL2C.l  M4dWB9j4fxBpRU7rDNDL2C.mat  jitEngineAccessInfo.mat  kOAtiea0aDNvgEO85Gf35F.l  kOAtiea0aDNvgEO85Gf35F.mat  s1gDwkpzdaX2hK7g6fBoVBF.l  s1gDwkpzdaX2hK7g6fBoVBF.mat  s4mhmlCSOKnGP3rGbSraZHB.l  s4mhmlCSOKnGP3rGbSraZHB.mat  s93wRKtRO5vtuOQ2EKLFGTC.l  s93wRKtRO5vtuOQ2EKLFGTC.mat  s9zhOJhmajX8DZ0RACKQVRG.l  s9zhOJhmajX8DZ0RACKQVRG.mat  sBfu2rvZEFwNz68IMTKhg7G.l  sBfu2rvZEFwNz68IMTKhg7G.mat  sE04q4Y1zCg0YBgGdzihBWH.l  sE04q4Y1zCg0YBgGdzihBWH.mat  sFAJknn5WzvlfH9bMLbaN3G.l  sFAJknn5WzvlfH9bMLbaN3G.mat  sFLXck3mer2Y1ZxyxIBkn7F.l  sFLXck3mer2Y1ZxyxIBkn7F.mat  sIbx6m1DtP6u1KoS0dbaAWF.l  sIbx6m1DtP6u1KoS0dbaAWF.mat  (+18 more)
(+1140 files in other folders)
