<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_simulink_ros</name>
  <version>0.0.0</version>
  <description>ROS node for the Simulink simulation backend</description>
  <maintainer email="seachrist.3@buckeyemail.osu.edu">Hunter Seachrist</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>riptide_msgs2</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>yaml_cpp_vendor</build_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
